# telegramLessonsScheduleBot

./: .coverage  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.py  date_time_utils.py  datetime_utils.py  docker-compose.yml  gap.py  lesson.py  main.py  markups.py  model.py  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  schedule.py  schedule_config.py  schedule_db.py  temp.py
alembic/: env.py
alembic/versions/: 3a81ac444a34_.py  593be3c7b70d_initional_revision.py  bb9743769825_.py  c3a6cf94b5c8_db_initional.py  d709da0e36b6_initial.py
app/: database.py  main.py
app/config/: logger.py  preferences.py  schedule_settings.py  settings.py
app/controllers/: new_lesson_controller.py  new_user_controller.py  set_lesson_controller_db.py
app/database/: database.py
app/db/: database.py
app/enums/: bot_values.py
app/exceptions/: slot_exceptions.py  teacher_exceptions.py  user_exceptions.py
app/handlers/: __init__.py  new_lesson.py  new_lesson_day_callback_handler.py  start.py
app/keyboard/: __init__.py  builder.py  context.py  fabric.py
app/keyboards/: choose_days_markup.py  days_for_students_markup.py  get_weekdays_markup.py  is_slots_correct.py  main_menu_markup.py  menu_markup.py  set_types_markup.py  slots_for_students_markup.py  sub_menu_markup.py
app/middlewares/: __init__.py  db_session.py  setup.py  user.py  validate_teacher.py
app/models/: BotMessage.py  admin.py  lesson.py  lesson_dto.py  lesson_type.py  model.py  schedule.py  student.py  teacher.py  teacher_slot.py  user.py  user_dto.py
app/notifier/: telegram_notifier.py
app/repositories/: slots_repo.py  (+7 more)
keyboards/: markups.py
tests/: conftest.py  docker-compose-test.yml
utils/: schedule.py  schedule_db.py
(+226 files in other folders)
