[project]
name = "scheduler"
version = "0.0.4"
description = "Telegram bot for teachers and their students"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.4",
    "async>=0.6.2",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "greenlet>=3.2.3",
    "pg>=0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
