[project]
name = "scheduler"
version = "0.0.4"
description = "Telegram bot for teachers and their students"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.4",
    "async>=0.6.2",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "greenlet>=3.2.3",
    "pg>=0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "stubs>=1.0.0",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
lint = [
    "ruff>=0.15.0",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.mypy]
disable_error_code = [
    "union-attr",
    "arg-type"
]

[tool.ruff]
include = [
    "app/*.py", 
    "tests/*.py",
    "*.py"
]

exclude = [
    ".git/",
    ".venv/",
    "database/alembic/",
    "database/orm/",
    "tests/fixtures/"
]

line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."


